<resources>
    <string name="app_name">Farmer Assistant</string>
    <string name="title_home">Home</string>
    <string name="title_question">Question</string>
    <string name="title_img_search">Recognition</string>
    <string name="welcome">Welcome to\nFarmer Assistant</string>
    <string name="com_diseases">Common Diseases</string>
    <string name="agro_type">Agro Types</string>
    <string name="ques">Sample Question</string>
    <string name="ask">Ask a Question</string>
    <string name="ask_any">Ask Anything</string>
    <string name="suggestion_based_on_weather">Suggestion Based on Weather</string>
    <string name="ask_img">Ask from Image</string>
    <string name="suggestion">Suggestion</string>
    <string name="loading">Loading…</string>
</resources>