<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.diseases.disease">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        app:cornerRadius="20dp"
        app:icon="@drawable/rounded_arrow_back_24"
        app:iconTint="@color/green"
        app:iconSize="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/ask_any"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toStartOf="@+id/read_btn"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="@+id/back_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/read_btn"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        app:cornerRadius="20dp"
        app:icon="@drawable/rounded_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="@+id/text_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/text_home"
        app:layout_constraintTop_toTopOf="@+id/text_home" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toTopOf="@+id/quest_lay"
        app:layout_constraintTop_toBottomOf="@+id/back_btn">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/img_src_card"
                android:layout_width="0dp"
                android:layout_height="140dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="30dp"
                android:maxWidth="350dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/src_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/light_rounded_imagesmode_24" />
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/agro_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/nunito_black"
                android:text="@string/ques"
                app:layout_constraintStart_toStartOf="@+id/ans_card"
                app:layout_constraintTop_toBottomOf="@+id/ans_card" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/agro_rec"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/agro_t" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ans_card"
                style="@style/Widget.Material3.CardView.Elevated"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:minHeight="160dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_src_card">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="gone" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/ans_t"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="16dp"
                            android:fontFamily="@font/nunito_bold"
                            android:textSize="15sp"
                            android:text="@string/suggestion"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </ScrollView>
            </com.google.android.material.card.MaterialCardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quest_lay"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/ask"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeWidth="0dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ques_btn"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/quest_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edittext"
            android:inputType="textMultiLine"
            android:maxHeight="90dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ques_btn"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="16dp"
        android:padding="15dp"
        app:cornerRadius="15dp"
        app:icon="@drawable/round_send_24"
        app:layout_constraintBottom_toBottomOf="@+id/quest_lay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quest_lay"
        app:layout_constraintTop_toTopOf="@+id/quest_lay" />

</androidx.constraintlayout.widget.ConstraintLayout>